# ome-arrow-benchmarks

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  test_track4.py
.github/: dependabot.yml
.github/workflows/: tests.yml
data/: compare_ome_arrow_only_runs.parquet  compare_ome_arrow_only_summary.parquet
docs/: TRACK4_README.md  pytorch_benchmark.md  pytorch_optimization.md  track4_implementation.md
notebooks/: compare_ome_arrow_only.py  compare_parquet_vortex_lance.ipynb  compare_parquet_vortex_lance.py  compare_parquet_vortex_lance_ome.py
src/benchmarks/: compare_ome_arrow_only.py  compare_ome_iris_all_images.py  compare_ome_iris_joins.py  compare_ome_iris_leaf_compression.py  compare_parquet_vortex_lance.py  compare_parquet_vortex_lance_ome.py  plot_ome_arrow_advantage_summary.py  pytorch_benchmark.py
