[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "demo-compare-parquet-vortex-lance-perf"
version = "0.1.0"
description = "Benchmarks comparing Parquet, Vortex, and Lance on a wide synthetic dataset."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "duckdb>=1.5.4",
  "jupyterlab>=4.6.0",
  "jupytext>=1.19.4",
  "lancedb>=0.33.0",
  "matplotlib>=3.11.0",
  "numcodecs>=0.16.5",
  "numpy>=2.4.6",
  "ome-arrow>=0.0.11",
  "ome-iris>=0.0.5",
  "ome-zarr>=0.16",
  "pandas>=3.0.3",
  "poethepoet>=0.46",
  "pyarrow>=24",
  "tifffile>=2026.3.3",
  "vortex-data>=0.75.0",
  "zarr>=3.1.6",
]

[dependency-groups]
dev = [
  "poethepoet>=0.46",
]

[tool.uv]
package = false

[tool.jupytext]
formats = "ipynb,py:light"

[tool.vulture]
min_confidence = 90
paths = [ "src/benchmarks" ]

[tool.poe]
tasks.lab.shell = "uv venv && uv sync && uv run jupyter lab"
tasks.run-benchmarks.shell = """\
  uv run python src/benchmarks/compare_parquet_vortex_lance.py && uv run python \
  src/benchmarks/compare_parquet_vortex_lance_ome.py && uv run python src/benchmarks/compare_ome_arrow_only.py && uv \
  run python src/benchmarks/compare_ome_iris_joins.py\
  """
tasks.setup.shell = "uv venv && uv sync"
